[package]
description = "Parser for the IKEv2 protocol"
license = "MIT/Apache-2.0"
keywords = ["IPsec","IKEv2","protocol","parser","nom"]
homepage = "https://github.com/rusticata/ipsec-parser"
repository = "https://github.com/rusticata/ipsec-parser.git"
documentation = "https://docs.rs/ipsec-parser"
name = "ipsec-parser"
version = "0.5.0"
authors = ["Pierre Chifflier <chifflier@wzdftpd.net>"]
categories = ["parser-implementations"]
readme = "README.md"
edition = "2018"

include = [
  "LICENSE-*",
  ".gitignore",
  ".travis.yml",
  "Cargo.toml",
  "src/*.rs",
  "assets/*"
]

[dependencies]
nom = "5.0"
rusticata-macros = "2.0"

[badges]
travis-ci = { repository = "rusticata/ipsec-parser" }
